src/objects/Cadence__c.object
<CustomObject>
    <fields>
        <fullName>Entrance_Criteria_PE__c</fullName>
        <description>JSON Format (internal purpose)</description>
        <label>Entrance Criteria PE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entrance_Criteria__c</fullName>
        <description>JSON Format</description>
        <label>Entrance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exit_Criteria_PE__c</fullName>
        <label>Exit Criteria PE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Criteria__c</fullName>
        <label>Exit Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participent_Activation__c</fullName>
        <label>Participent Activation</label>
        <picklist>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Participants__c</fullName>
        <label>Total Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>matching_priority__c</fullName>
        <label>matching priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sequence</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>